--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
       .attribution {
         font-size: 16px;
         text-align: center;
-        color: hsl(234, 29%, 20%);
+        color: hsl(191, 50%, 64%);
       }
       .attribution a {
+        text-decoration: none;
         color: hsl(228, 50%, 47%);
       }
     </style>
