--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="success-message" id="success-message">
       <div class="success__prompt">
         <div class="prompt__content">
-          <img src="/assets/images/icon-success.svg" alt="success-message" />
+          <img src="./assets/images/icon-success.svg" alt="success-message" />
           <h2>Thanks for subscribing!</h2>
           <p>
             A confirmation email has been sent to
